--- a/Week1/Day 3/Practice/Flex our block/Flexourblock.html
+++ b/Week1/Day 3/Practice/Flex our block/Flexourblock.html
@@ -19,6 +19,20 @@
             </div>
         </div>
     </div>
+    <div class="container">
+        <div class="top-nav"></div>
+        <div class="row">
+            <div class="side-nav"></div>
+            <div class="main">
+                <div class="row">
+                    <div class="sub-content"></div>
+                    <div class="sub-content"></div>
+                    <div class="sub-content"></div>
+                </div>
+                <div id="advertisement"></div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
 
