--- a/Week1/Day 4/Practice/User Card/UserCard.html
+++ b/Week1/Day 4/Practice/User Card/UserCard.html
@@ -6,21 +6,22 @@
   <title>¨Profile</title>
 </head>
 <body>
-    <div class="round">
-        <img class="image1" src="icons/user-circle.png"></h3>
-    </div>
+<div class="flex-container">
   <div class="container">
-    <div class="bluebar"></div>
+    <div class="bluebar">
+      <img class="image1" src="icons/user-circle.png" class="image1">
+    </div>
     <div class="whitebar">
-        <br><h1>Jane Doe</h1>
-        <h3> <img class="image" src="icons/map-marker.png"> Seattle</h3>
-        <h3>Developer|Engineer|Problem Solver<br>
-            Master of shadows and the Internet!</h3>
-        <h3>
-            <img class="image" src="icons/gear.png">
-            <a href="https://www.linkedin.com/in/soumaya-cherichi-9b67a925/">  edit profile</a>
-        </h3>
+        <h1>Jane Doe</h1>
+        <h3> <img  src="icons/map-marker.png"class="image"> Seattle</h3>
+        <p>Developer|Engineer|Problem Solver<br>
+            Master of shadows and the Internet!</p>
+        <p>
+            
+            <a href="https://www.linkedin.com/in/soumaya-cherichi-9b67a925/"><img src="icons/gear.png" class="image">  edit profile</a>
+        </p>
     </div>
   </div>
+</div>
 </body>
 </html>
