--- a/Week1/Day 3/Practice/Flex Navbar/FlexNavbar.html
+++ b/Week1/Day 3/Practice/Flex Navbar/FlexNavbar.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+    <div class="top">
     <div class="nav">
         <h1 class="nav-title">Profile</h1>
         <ul class="nav-links">
@@ -14,6 +15,7 @@
             <li><button class="btn">Sign Out</button></li>
         </ul>
     </div>
+</div>
 </body>
 </html>
 
